// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas con <GifExpertApp /> debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
     GifExpert 
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas con <GifExpertApp /> debe de mostrarse correctamente 1`] = `
<Fragment>
  <h2>
     GifExpert 
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
